# manning-python-algorithms

./: .gitignore  README.md  pyproject.toml
src/trees/: binary_tree.py  nary_tree.py
tests/: test_binary_tree.py  test_nary_tree.py
trees/: binary_tree.py  nary_tree.py
